--- a/style.css
+++ b/style.css
@@ -6,12 +6,38 @@ klebinho66302@yahoo.com.br
 
 */
 
+/* CSS Reset */
+*{
+    margin: 0;
+    border: 0;
+    padding: 0;
+
+}
+
+/* Importação (Google Fonts) */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+
+body {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1em;
+}
+
+/* Layout */
+.Container {
+    margin: auto;
+    background-color: #77ff00;
+}
+
 /* Smartphone Portrait >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 
 /*Smartphone Landscape >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 @media (min-width: 576px){
     body{
         background-color: #0ff;
+    }
+    /* Layout */
+    .Container {
+        max-width: 540px;
     }
 }
 
@@ -20,16 +46,28 @@ klebinho66302@yahoo.com.br
     body{
         background-color: #ffff00;
     }
+    /* Layout */
+    .Container {
+        max-width: 720px;
+    }
 }
 /* Tablet Landscape >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 @media (min-width: 992px){
     body{
         background-color: #f60;
     }
+    /* Layout */
+    .Container {
+        max-width: 960px;
+    }
 }
 /* PC >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 @media (min-width: 1200px){
     body{
         background-color: #f00;
+    }
+    /* Layout */
+    .Container {
+        max-width: 1140px;
     }
 }
